# gdxcomp

./: .gitignore  .gitmodules  .rules  BENCH_BASELINE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/gdx/: Cargo.toml
crates/gdx-sys/: Cargo.toml  build.rs
crates/gdx-sys/src/: lib.rs
crates/gdx-sys/tests/: smoke.rs
crates/gdx/src/: error.rs  lib.rs  lock.rs  reader.rs  types.rs  writer.rs
crates/gdx/tests/: oracle.rs  roundtrip.rs
crates/gdxcomp-core/: Cargo.toml
crates/gdxcomp-core/benches/: ipc_loopback.rs  load_and_view.rs
crates/gdxcomp-core/src/: cache.rs  compare.rs  error.rs  lib.rs  model.rs  setup.rs  witch.rs
crates/gdxcomp-core/tests/: example_files.rs  real_file.rs  view.rs
scripts/: bundle-size.sh
src/: App.tsx  api.ts  plotly.d.ts  release.ts  styles.css  types.test.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AboutDialog.tsx  ChartView.tsx  DataTable.test.tsx  DataTable.tsx  FileBar.tsx  FilterPanel.tsx  MappingPanel.test.tsx  MappingPanel.tsx  SetupToolbar.tsx  SymbolPicker.tsx
