[workspace]
resolver = "2"
members = [
    "crates/gdx-sys",
    "crates/gdx",
    "crates/gdxcomp-core",
]
# The Tauri app is its own workspace (see src-tauri/Cargo.toml) so that the
# core crates stay testable without the GUI system dependencies (webkit2gtk).
exclude = ["src-tauri"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
inherits = "release"
