[package]
name = "gdxcomp"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "Plot and compare GAMS GDX files"
publish = false

# Standalone workspace: keeps the GUI build (which needs webkit2gtk) separate
# from the core crates' workspace at the repository root.
[workspace]

[lib]
name = "gdxcomp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gdxcomp-core = { path = "../crates/gdxcomp-core" }

[features]
# Enabled by `tauri dev`/`build` to allow CSP relaxation etc. via Tauri.
custom-protocol = ["tauri/custom-protocol"]
