[package]
name = "gdx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper for reading and writing GAMS GDX files."
publish = false

[dependencies]
gdx-sys = { path = "../gdx-sys" }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
