[package]
name = "gdxcomp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UI-independent domain logic for gdxcomp: comparison, filtering/mapping, and display setup."
publish = false

[dependencies]
gdx = { path = "../gdx" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
