[package]
name = "gdxcomp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UI-independent domain logic for gdxcomp: comparison, filtering/mapping, and display setup."
publish = false

[dependencies]
gdx = { path = "../gdx" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap = "2"
lru = "0.12"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "load_and_view"
harness = false

[[bench]]
name = "ipc_loopback"
harness = false
